Implement a method to invalidate the cache

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   ],
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "matcher": "^3.0.0"
   }
 }
