--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/chance": "^1.1.1",
     "@types/express": "^4.17.9",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.20",
@@ -46,6 +47,7 @@
   ],
   "dependencies": {
     "axios": "^0.21.1",
+    "chance": "^1.1.7",
     "express": "^4.17.1",
     "matcher": "^3.0.0"
   }
