--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
   ],
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "chance": "^1.1.7",
     "express": "^4.17.1",
+    "fast-xml-parser": "^3.17.6",
     "matcher": "^3.0.0"
   }
 }
