--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.20",
     "@types/ramda": "^0.27.34",
+    "@types/url-join": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "aws-sdk": "^2.824.0",
@@ -51,6 +52,7 @@
     "chance": "^1.1.7",
     "express": "^4.17.1",
     "fast-xml-parser": "^3.17.6",
-    "matcher": "^3.0.0"
+    "matcher": "^3.0.0",
+    "url-join": "^4.0.1"
   }
 }
